# nasa_marine_clipper

./: CMakeLists.txt  README.md  package.xml
msg/: Anemometer.msg
src/: nasa_marine_clipper_node.cpp
