<?xml version="1.0"?>
<package format="2">
  <name>nasa_marine_clipper</name>
  <version>0.0.0</version>
  <description>The nasa_marine_clipper package</description>

  <maintainer email="p.mordel@sitia.fr">Pol MORDEL</maintainer>

  <license>BSD</license>

  <author email="p.mordel@sitia.fr">Pol MORDEL</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
